crates/nash-solve/tests/snapshots/inference__annotated_body_requires_a_given_for_a_rigid_trait_argument.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nmissing : 'a -> 'a\nmissing x = keep x\n"
info: diagnostic
---
nash::type::missing_constraint

  × `keep` requires undeclared constraint `Keep 'a`.
   ╭─[Main.nash:5:13]
 4 │ missing : 'a -> 'a
 5 │ missing x = keep x
   · ───┬───     ──┬─
   ·    │          ╰── constraint required here
   ·    ╰── annotation for `missing`
   ╰────
  help: Add `Keep 'a` to the annotation for `missing`.
