crates/nash-solve/tests/snapshots/inference__annotated_value_rejects_a_hidden_trait_variable.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntrait Round 'a where\n    create : () -> 'a\n    discard : 'a -> ()\nvalue : ()\nvalue = discard (create ())\n"
---
[
    AmbiguousType {
        region: Region {
            start: Position {
                line: 6,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 6,
            },
        },
        name: "value",
        variable: FlexVar(
            "a",
        ),
        predicates: [
            AmbiguousPredicate {
                trait_: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "Round",
                },
                args: [
                    FlexVar(
                        "a",
                    ),
                ],
            },
        ],
    },
]
