crates/nash-solve/tests/snapshots/inference__apply_function.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (apply)\n\napply f x = f x\n"
---
apply : forall (a : Any) (b : Any). (a -> b) -> a -> b
