crates/nash-solve/tests/snapshots/inference__big_builtin_types_in_scope.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\nf : Primitive.List Primitive.Int -> List Int\nf x = x\n"
---
f : List Int -> List Int
