crates/nash-solve/tests/snapshots/inference__big_equality_is_automatic_and_retains_structural_evidence.snap
---
source: crates/nash-solve/tests/inference.rs
expression: "format!(\"{}\\nStructural evidence: {}\", render_annotations(&annotations),\nevidence.join(\", \"))"
---
same : Token -> Token -> bool
sameBox : Box -> Box -> bool
sameList : forall a. Big a => List a -> List a -> bool
Structural evidence: Box, List a, Token, Token
