crates/nash-solve/tests/snapshots/inference__boolean_and_unit_literals_require_matching_implementations.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..))\ntype token = Token\nvalue : token\nvalue = True\n"
info: diagnostic
---
nash::type::missing_impl

  × No impl for `Literal.FromBool token`.
   ╭─[Main.nash:5:9]
 4 │ value : token
 5 │ value = True
   ·         ──┬─
   ·           ╰── required by `fromBool`
   ╰────
  help: Available impl heads:

            bool

        Import or define an impl for `Literal.FromBool token`.
